[package]
name = "cryptolens"
description = "Rust Interface for Cryptolens Web API"
license-file = "LICENSE.md"
homepage = "https://github.com/cryptolens/cryptolens-rust"
documentation = "https://help.cryptolens.io/"
repository = "https://github.com/cryptolens/cryptolens-rust"
version = "0.0.1"
authors = ["Cryptolens AB"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11"
openssl = "0.10"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.3"
