[package]
name = "cryptolens"
description = "Rust Interface for Cryptolens Web API"
license-file = "LICENSE.md"
homepage = "https://github.com/cryptolens/cryptolens-rust"
documentation = "https://help.cryptolens.io/"
repository = "https://github.com/cryptolens/cryptolens-rust"
version = "0.0.2"
authors = ["Cryptolens AB"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "0.22" }
derive_builder = { version = "0.20" }
openssl = { version = "0.10" }
reqwest = { version = "0.12", features = ["default-tls","json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde-xml-rs = {version = "0.8" }
serde_json = { version = "1" }
thiserror = { version = "2.0" }

[dev-dependencies]
serde_urlencoded = { version = "0.7.1" }
tokio = { version = "1", features = ["full"] }

